fixed z-indexing, 'continue game' button was covered by another div when scaling window.

--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,7 @@ div.continueContainer {
 }
 
 div.challenge {
+  z-index: 2;
   /*display: inline-block;
   margin: auto;
   text-align: center;
